--- a/src/styles/Input.module.css
+++ b/src/styles/Input.module.css
@@ -2,7 +2,6 @@
     margin-bottom: 10px;
     position: relative;
     height: 48px;
-    margin-bottom: 1.5rem;
     margin-top: 2.1rem;
     letter-spacing: 1px;
   }
@@ -48,3 +47,25 @@
   .form__input:focus{
     border: 2px solid rgb(6, 104, 104);
   }
+.dateInput{
+  border: 1px solid black;
+    border-radius: .5rem;
+  padding: .5rem;
+  width: 100%;
+  height: 100%;
+}
+.dateLabel{
+  letter-spacing: 0.5px;
+  font-size: 17px;
+  
+  font-weight: 500;
+    padding: 0 1rem;
+  
+}
+.dropDown{
+  border: 1px solid black;
+    border-radius: .5rem;
+  padding: .5rem;
+  width: 100%;
+  height: 100%;
+}
