--- a/src/styles/Login.module.css
+++ b/src/styles/Login.module.css
@@ -4,7 +4,7 @@
   padding: 10px;
 }
 .form{
-    border-radius: 10px;
+    border-radius: 7px;
   letter-spacing: 2px;
   font-weight: 500;
   margin: 5% 30%;
@@ -17,11 +17,11 @@
     text-decoration: none;
       display: inline-block;
       color: black;
-      font-size: 16px;
+      font-size: 17px;
       letter-spacing: 1px;
       font-weight: 500;
       padding: 10px 6px;
-      width: 30%;
+      width: 10rem;
       margin: 3px;
       border-radius: 5px;
       transition: all 0.3s ease;
