--- a/src/styles/Input.module.css
+++ b/src/styles/Input.module.css
@@ -49,17 +49,16 @@
   }
 .dateInput{
   border: 1px solid black;
-    border-radius: .5rem;
+  border-radius: .5rem;
   padding: .5rem;
   width: 100%;
   height: 100%;
 }
 .dateLabel{
   letter-spacing: 0.5px;
-  font-size: 17px;
-  
+  font-size: 17px;  
   font-weight: 500;
-    padding: 0 1rem;
+  padding: 0 1rem;
   
 }
 .dropDown{
@@ -68,4 +67,24 @@
   padding: .5rem;
   width: 100%;
   height: 100%;
+}
+
+.add{
+  margin: 0px 10%;
+  color: black;
+  text-decoration: none;
+  font-size: 17px;
+  font-weight: 400;
+  width: 8rem;
+  padding: 8px 5px;
+  border-radius: 5px;
+  transition: all 0.3s ease;
+  background: rgb(0, 212, 212);
+  border: 1px solid rgb(0, 212, 212);
+}
+
+.add.active,
+.add:hover{
+    background-color: rgb(0, 180, 180);
+    border: 1px solid rgb(0, 180, 180);
 }
