--- a/src/styles/Transportation.module.css
+++ b/src/styles/Transportation.module.css
@@ -1,7 +1,7 @@
 .cardForm{
     text-align: center;
     background-color:white ;
-    margin: 50px 20%;
+    margin: 50px 15%;
     padding: 20px;
     border-radius: 5px;
 }
@@ -135,3 +135,17 @@
 
   
   /**/
+  .cardItem{
+    background-color: rgb(206, 206, 206);
+    margin-top: 10px;
+    border-radius: 4px;
+    padding: 10px;
+    font-size: 16px;
+  }
+  .cardItem2{
+    background-color: rgba(124, 124, 124, 0.383);
+    margin-top: 10px;
+    border-radius: 4px;
+    padding: 10px;
+    font-size: 16px;
+  }
