--- a/src/styles/Request.module.css
+++ b/src/styles/Request.module.css
@@ -52,7 +52,13 @@
             border: 1px solid rgb(0, 134, 134);
             
           }
-
+          .cardItem2{
+            background-color: rgba(124, 124, 124, 0.383);
+            margin-top: 10px;
+            border-radius: 4px;
+            padding: 10px;
+            font-size: 16px;
+          }
 @media (max-width:950px) {
     .cardForm{
       margin: 10px;
