--- a/src/styles/Input.module.css
+++ b/src/styles/Input.module.css
@@ -1,3 +1,5 @@
+@import url("Variables.css");
+
 .form__div{
     margin-bottom: 10px;
     position: relative;
@@ -34,7 +36,6 @@
     top: -1.5rem;
     left: .8rem;
     font-size: 17px;
-    color: rgb(15, 172, 172);
     font-weight: 500;
   }
   .form__input:not(:placeholder-shown).form__input:not(:focus)+ .form__label{
@@ -45,14 +46,16 @@
   }
   
   .form__input:focus{
-    border: 2px solid rgb(6, 104, 104);
+    border: 2px solid var(--primary-color);
   }
 .dateInput{
   border: 1px solid black;
   border-radius: .5rem;
-  padding: .5rem;
+  padding: 1.2rem 1rem 0.8rem 1rem;
+  background-color: var(--light-grey);
   width: 100%;
   height: 100%;
+  
 }
 .dateLabel{
   letter-spacing: 0.5px;
@@ -71,7 +74,7 @@
 
 .add{
   margin: 0px 10%;
-  color: black;
+  color: white;
   text-decoration: none;
   font-size: 17px;
   font-weight: 400;
@@ -79,12 +82,12 @@
   padding: 8px 5px;
   border-radius: 5px;
   transition: all 0.3s ease;
-  background: rgb(0, 212, 212);
-  border: 1px solid rgb(0, 212, 212);
+  background: var(--primary-color);
+  border: 1px solid var(--primary-color);
 }
 
 .add.active,
 .add:hover{
-    background-color: rgb(0, 180, 180);
-    border: 1px solid rgb(0, 180, 180);
+    background-color: var(--primary-color-hover);
+    border: 1px solid var(--primary-color-hover);
 }
