--- a/src/styles/Offer.module.css
+++ b/src/styles/Offer.module.css
@@ -1,3 +1,5 @@
+@import url("Variables.css");
+
 .cardForm{
     text-align: center;
     background-color:rgb(255, 255, 255) ;
@@ -7,13 +9,13 @@
     text-decoration: none;
 }
 .cardElement{
-    color: white;
+    color: black;
     margin: 10px 0px;
     padding: 10px;
     border-radius:2px;
-    background-color: rgba(0, 12, 14, 0.89);
+    background-color: var(--light-grey);
     transition: all ease 0.3s;
-}
+    box-shadow: 0 2px 6px rgb(95 108 114 / 35%), 0 0 6px rgb(95 108 114 / 5%);}
 /* .cardElement:hover{
     color: white;
     opacity: 1.5;
