--- a/src/styles/Request.module.css
+++ b/src/styles/Request.module.css
@@ -1,25 +1,27 @@
+@import url("Variables.css");
+
 .cardForm{
-    text-align: center;
+    /* text-align: center; */
     background-color:rgb(255, 255, 255) ;
     margin: 50px 20%;
     padding: 20px;
     border-radius: 7px;
     text-decoration: none;
-}
-
-.cardElement{
-    color: white;
-    margin: 10px 0px;
+  }
+  
+  .cardElement{
+    color: black;
+    margin: 20px 0px;
     padding: 10px;
     border-radius: 5px;
-    background-color: rgba(0, 8, 10, 0.89);
+    background-color: var(--light-grey);
     transition: all ease 0.3s;
+    box-shadow: 0 2px 6px rgb(95 108 114 / 35%), 0 0 6px rgb(95 108 114 / 5%);
 }
 .cardElement:hover{
-    color: white;
-    opacity: 1.5;
-    background: rgb(0, 56, 56);
-    cursor: pointer;
+    box-shadow: 0 2px 6px rgb(95 108 114 / 75%), 0 0 6px rgb(95 108 114 / 5%);
+    /* cursor: pointer; */
+    
 }
 
 .offercard{
@@ -31,9 +33,27 @@
   transition: all ease 0.3s;
 
 }
-.linea{
-    margin: 2px 10px;
+.center{
+  text-align: center;
 }
+.truckIcon{
+  
+  color: var(--primary-color);
+  font-size: 44px;
+  margin-top: 10px
+}
+.arrowIcon{
+  color: var(--primary-color);
+  font-size: 25px;
+  margin-left: 7px;
+  margin-right: 7px;
+}
+.line{
+    margin: 2px 10px;
+    color: var(--primary-color);
+    height: 3px;
+    opacity: 1;
+  }
 .btnback{
     margin: 0px 10px;
       text-decoration: none;
@@ -46,15 +66,15 @@
         transition: all 0.3s ease;
         margin-bottom: 25px;
         color: white;
-        background: rgb(53, 53, 53);
-        border: 1px solid rgb(53, 53, 53);
+        background: var(--primary-color);
+        border: 1px solid var(--primary-color);
         
       }
       .btnback.active,
       .btnback:hover{
           color: white;
-          background-color: rgb(1, 110, 110);
-          border: 1px solid rgb(0, 148, 148);
+          background-color: var(--primary-color-hover);
+          border: 1px solid var(--primary-color-hover);
     }
 
     .btn{
@@ -67,27 +87,27 @@
           border-radius: 5px;
           transition: all 0.3s ease;
           color: white;
-          background: rgb(2, 172, 172);
-          border: 1px solid rgb(2, 172, 172);
+          background: var(--primary-color);
+          border: 1px solid var(--primary-color);
           
         }
         .btn.active,
         .btn:hover{
             color: white;
-            background-color: rgb(1, 110, 110);
-            border: 1px solid rgb(0, 148, 148);
+            background-color: var(--primary-color-hover);
+            border: 1px solid var(--primary-color-hover);
       }
 
     .next{
-            background: rgb(0, 134, 134);
-            border: 1px solid rgb(0, 134, 134);
+            background: var(--primary-color);
+            border: 1px solid var(--primary-color);
             
           }
           .cardItem2{
             background-color: rgba(124, 124, 124, 0.383);
             margin-top: 10px;
-            border-radius: 4px;
-            padding: 10px;
+            border-radius: 15px;
+            padding: 8px;
             font-size: 16px;
           }
 @media (max-width:950px) {
