--- a/src/styles/Transportation.module.css
+++ b/src/styles/Transportation.module.css
@@ -1,6 +1,8 @@
+@import url("Variables.css");
+
 .cardForm{
     text-align: center;
-    background-color:white ;
+    background-color:var(--light-grey) ;
     margin: 50px 15%;
     padding: 20px;
     border-radius: 5px;
@@ -17,8 +19,8 @@
       transition: all 0.3s ease;
       margin-bottom: 25px;
       color: white;
-      background: rgb(0, 0, 0);
-      border: 1px solid black;
+      background: var(--primary-color);
+      border: 1px solid var(--primary-color);
       
     }
 .btnback{
@@ -33,18 +35,17 @@
       transition: all 0.3s ease;
       margin-bottom: 25px;
       color: white;
-      background: rgb(53, 53, 53);
-      border: 1px solid rgb(53, 53, 53);
-      
+      background: var(--primary-color);
+      border: 1px solid var(--primary-color);      
     }
     .btnback.active,
     .btnback:hover,
     .btnDefault.active,
     .btnDefault:hover{
         color: white;
-        background-color: rgb(0, 148, 148);
-        border: 1px solid rgb(0, 148, 148);
-  }
+        background-color: var(--primary-color-hover);
+        border: 1px solid var(--primary-color-hover);
+      }
   .card{
     background-color:rgb(218, 218, 218) ;
     margin: 5px;
@@ -113,13 +114,14 @@
   }
   
   .stepperitem.completed .stepcounter {
-    background-color: rgb(0, 148, 148);
+    background-color: var(--primary-color);
+    color: white;
   }
   
   .stepperitem.completed::after {
     position: absolute;
     content: "";
-    border-bottom: 2px solid rgb(0, 148, 148);
+    border-bottom: 2px solid var(--primary-color);
     width: 100%;
     top: 20px;
     left: 50%;
