--- a/src/styles/Input.module.css
+++ b/src/styles/Input.module.css
@@ -22,6 +22,23 @@
     background: none;
     z-index: 1;
   }
+  .form__location_input{
+    color: white;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 1px solid rgba(253, 253, 253, 0.774);
+    border-radius: .5rem;
+    outline: none;
+  font-size: 14px;  
+    padding: 1rem;
+    background: none;
+    z-index: 1;
+  }
+
+
   .form__label{
     position: absolute;
     left: 1rem;
