--- a/src/styles/Input.module.css
+++ b/src/styles/Input.module.css
@@ -3,8 +3,8 @@
 .form__div{
     margin-bottom: 10px;
     position: relative;
-    height: 48px;
-    margin-top: 2.1rem;
+    height: 44px;
+    margin-top: 2rem;
     letter-spacing: 1px;
   }
   .form__input{
@@ -71,7 +71,8 @@
   padding: 1.2rem 1rem 0.8rem 1rem;
   background-color: var(--light-grey);
   width: 100%;
-  height: 100%;
+  height: 44px;
+  font-size: 15px;
   
 }
 .dateLabel{
@@ -90,7 +91,6 @@
 }
 
 .add{
-  margin: 0px 10%;
   color: white;
   text-decoration: none;
   font-size: 17px;
@@ -105,6 +105,21 @@
 
 .add.active,
 .add:hover{
+    background-color: var(--primary-color-hover);
+    border: 1px solid var(--primary-color-hover);
+}
+.iconButton{
+  color: white;
+  padding: 8px 0px;
+width: 6rem;
+  border-radius: 5px;
+  transition: all 0.3s ease;
+  background: var(--primary-color);
+  border: 1px solid var(--primary-color);
+}
+
+.iconButton.active,
+.iconButton:hover{
     background-color: var(--primary-color-hover);
     border: 1px solid var(--primary-color-hover);
 }
