--- a/src/styles/Input.module.css
+++ b/src/styles/Input.module.css
@@ -69,7 +69,7 @@
   border: 1px solid black;
   border-radius: .5rem;
   padding: 1.2rem 1rem 0.8rem 1rem;
-  background-color: var(--light-grey);
+      background-color: white;
   width: 100%;
   height: 44px;
   font-size: 15px;
