--- a/src/styles/Request.module.css
+++ b/src/styles/Request.module.css
@@ -16,7 +16,7 @@
     margin: 20px 0px;
     padding: 10px;
     border-radius: 5px;
-    background-color: var(--light-grey);
+    background-color: white;
     transition: all ease 0.3s;
     box-shadow: 0 2px 6px rgb(95 108 114 / 35%), 0 0 6px rgb(95 108 114 / 5%);
 }
@@ -118,6 +118,7 @@
       margin: 10px;
       padding: 10px 4px 0px 4px;
     }
+    
     .cardElement{
         margin: 4px 0px;
     }
